--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion Project</title>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="./resources/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
   <center>
     <h1>Discover hidden places in the world around you</h1>
     <a href="">Download Excursion (Coming soon!)<a/><br />
     <video>
-      <source src="excursion.mp4" type="video/mp4">
+      <source src="./resources/excursion.mp4" type="video/mp4">
     </video>
     <div id="section2">
       <h1>Your personal travel guide</h1>
