--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <center>
     <h1>Discover hidden places in the world around you</h1>
     <a href="">Download Excursion (Coming soon!)<a/><br />
-    <video>
+    <video autoplay>
       <source src="./resources/excursion.mp4" type="video/mp4">
     </video>
     <div id="section2">
